[project]
name = "poc-learning-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.5.4",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
    "ty>=0.0.1a16",
]
